@@ -1294,7 +1294,7 @@ static apr_status_t on_stream_headers(h2_session *session, h2_stream *stream,
         }
         else {
             ap_log_cerror(APLOG_MARK, APLOG_DEBUG, status, session->c,
-                          H2_STRM_LOG(APLOGNO(), stream, "invalid trailers"));
+                          H2_STRM_LOG(APLOGNO(10024), stream, "invalid trailers"));
             h2_stream_rst(stream, NGHTTP2_PROTOCOL_ERROR);
         }
         goto leave;
@@ -1384,7 +1384,7 @@ static apr_status_t on_stream_headers(h2_session *session, h2_stream *stream,
         }
         else {
             ap_log_cerror(APLOG_MARK, APLOG_DEBUG, status, session->c,
-                          H2_STRM_LOG(APLOGNO(), stream, "invalid response"));
+                          H2_STRM_LOG(APLOGNO(10025), stream, "invalid response"));
             h2_stream_rst(stream, NGHTTP2_PROTOCOL_ERROR);
         }
     }
