@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: client streams that lack the EOF flag get now forcefully
+     closed with a RST_STREAM (NO_ERROR) when the request has been answered.
+     [Stefan Eissing]     
+
   *) mod_http2: only when 'HttpProtocolOptions Unsafe' is configured, will
      control characters in response headers or trailers be forwarded to the
      client. Otherwise, in the default configuration, a request will eiher 
